--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -10,8 +10,8 @@
                         <li>
                             <h1><%= order._id%></h1>
                             <ul>
-                                <% order.items.forEach(item=>{%>
-                                    <li><%= item.title %>(<%= item.quantity %>)</li>
+                                <% order.products.forEach(item=>{%>
+                                    <li><%= item.product.title %>(<%= item.quantity %>)</li>
                                  <%})%>   
                             </ul>
                         </li>
